new iocage doc URL
iocage is now maintained at github.com/freebsd/iocage
Old URL still exists, but is not accurate anymore

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -1241,7 +1241,7 @@ Below is an incomplete list of the different FreeBSD Jail managers:
 | iocage
 | BSD-2
 | package:sysutils/iocage[]
-| link:https://iocage.readthedocs.io/en/latest/[Documentation]
+| link:https://freebsd.github.io/iocage/[Documentation]
 
 | ezjail
 | link:https://erdgeist.org/beerware.html[Beer Ware]
