[phb][Uses]: Add Uses=sudo

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2761,6 +2761,13 @@ BROKEN_SSL_REASON_libressl=	needs features only available in OpenSSL
 
 ====
 
+[[uses-sudo]]
+== `sudo`
+
+Possible arguments: (none)
+
+Adds a run time dependecy on package:security/sudo[].
+
 [[uses-tar]]
 == `tar`
 
