HW Relnotes template: Add hgame and sbp
Add the hgame game controller driver, and replace the handwritten sbp
firewire storage driver entry with a maintainable macro which will
notify us instead of creating a dead link if the driver is removed.

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -757,7 +757,7 @@ The man:ehci[4] driver supports USB 2.0 controllers implementing the Enhanced Ho
 
 &hwlist.fwohci;
 
-[amd64, i386] Serial Bus Protocol 2 (SBP-2) storage devices (man:sbp[4] driver)
+&hwlist.sbp;
 
 [[bluetooth]]
 === Bluetooth Devices
@@ -818,6 +818,8 @@ including many laptop pointing devices (man:psm[4] driver)
 ====
 man:moused[8] has more information on using traditional pointing devices with the FreeBSD console.
 ====
+
+&hwlist.hgame;
 
 [amd64, i386] Floppy drives (man:fdc[4] driver)
 
