--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -969,6 +969,7 @@ driver supports the following SATA/SAS/NVMe RAID controllers:
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3616 (16 Port SAS/PCIe)
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3708 (8 Port SAS/PCIe)
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3716 (16 Port SAS/PCIe)
+*	Broadcom Ltd./Avago Tech (LSI) SAS 3808 (8 Port SAS/PCIe)
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3816 (16 Port SAS/PCIe)
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3916 (16 Port SAS/PCIe)
 
@@ -2016,6 +2017,7 @@ The
 driver supports Intel 10Gb Ethernet PCIe adapters,
 including:
 
+*	Intel(R) Ethernet E610
 *	Intel(R) Ethernet X553
 *	Intel(R) Ethernet X552
 *	Intel(R) Ethernet X550
@@ -4678,7 +4680,13 @@ The driver supports the following IEEE 1394 OHCI chipsets:
 *	VIA Fire II (VT6306)
 
 
-[amd64, i386] Serial Bus Protocol 2 (SBP-2) storage devices (man:sbp[4] driver)
+
+The
+**sbp**
+driver supports FireWire Serial Bus Protocol 2
+(SBP-2)
+storage devices.
+
 
 [[bluetooth]]
 === Bluetooth Devices
@@ -4831,6 +4839,14 @@ including many laptop pointing devices (man:psm[4] driver)
 man:moused[8] has more information on using traditional pointing devices with the FreeBSD console.
 ====
 
+
+The
+**hgame**
+driver supports HID gamepads, joysticks, and controllers such as:
+
+*	8bitdo USB Wireless Adapter 2
+
+
 [amd64, i386] Floppy drives (man:fdc[4] driver)
 
 [amd64, i386] VGA-compatible video cards (man:vga[4] driver)
@@ -4841,7 +4857,6 @@ Information regarding specific video cards and compatibility with Xorg can be fo
 ====
 
 [amd64, i386] "PC standard" parallel ports (man:ppc[4] driver)
-
 
 
 The
@@ -4920,7 +4935,7 @@ driver supports the following chipsets:
 
 The
 **mx25l**
-driver provides support for the following devices:
+driver supports the following spi flash memory devices:
 
 *	AT25DF641
 *	EN25F32
@@ -4936,6 +4951,7 @@ driver provides support for the following devices:
 *	MX25LL256
 *	MX25LL32
 *	MX25LL64
+*	N25Q64
 *	S25FL032
 *	S25FL064
 *	S25FL128
