HW Relnotes template: Correct POWER entry
Reported by:	jhibbits

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -173,7 +173,7 @@ Raptor CS:
 * Talos II (POWER9)
 * Blackbird (POWER9)
 
-crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER7 through POWER4, including:
+crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER9 through POWER4, including the above as well as:
 
 A-EON:
 
