--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -173,7 +173,7 @@ Raptor CS:
 * Talos II (POWER9)
 * Blackbird (POWER9)
 
-crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER7 through POWER4, including:
+crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER9 through POWER4, including the above as well as:
 
 A-EON:
 
