--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -52,7 +52,7 @@ General discussions about the pending release and known issues should be sent to
 31 October 2025 |31 October 2025 |Fourth beta test snapshot.
 |BETA5 builds begin |7 November 2025 |7 November 2025 |Fifth beta test snapshot.
 |RC1 builds begin |[.line-through]#31 October 2025# +
-14 November 2025 |- |First release candidate.
+14 November 2025 |16 November 2025 |First release candidate.
 |RC2 builds begin* |[.line-through]#7 November 2025# +
 21 November 2025 |- |Second release candidate.
 |[.line-through]#RC3 builds begin# |[.line-through]#14 November 2025# |- |[.line-through]#Third release candidate.#
