--- a/website/content/en/releases/15.0R/signatures.adoc
+++ b/website/content/en/releases/15.0R/signatures.adoc
@@ -4,11 +4,11 @@ sidenav: download
 ---
 
 :localRel: 15.0
-:localBranchName: BETA5
+:localBranchName: RC1
 :localBranchStable: stable/15
 :localBranchReleng: releng/15.0
-:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-15.0-BETA5
-:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-15.0-BETA5
+:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-15.0-RC1
+:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-15.0-RC1
 
 = FreeBSD {localRel}-{localBranchName} Release Checksum Signatures
 
