--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -417,23 +417,23 @@ gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
 Fix `-U` flag of man:ps[1] to select processes by real user IDs.
 This is what POSIX mandates for option `-U` and arguably the behavior that most users actually need in most cases.
 Before, `-U` would select processes by their effective user IDs (which is the behavior mandated by POSIX for option `-u`).
-gitref:a2132d91739d[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:a2132d91739d[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 Make '-O' more versatile and predictable for man:ps[1].
 The man:ps[1] display's list of columns is now first built without taking into account the `-O` options.
 In a second step, all columns passed via `-O` are finally inserted after the built-so-far display's first PID column (if it exists, else at start), in their order of appearance as arguments to the `-O` options.
-gitref:1fc8cb547cd4[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:1fc8cb547cd4[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 Remove not-explicitly-requested columns with duplicate data in man:ps[1].
 Before this change, when stacking up more columns in the display through command-line options, if user requested to add some "canned" display (through options `-j`, `-l`, `-u` or `-v`), columns in it that were "duplicates" of already requested ones (meaning that they share the same keyword, regardless of whether their headers have been customized) were in the end omitted.
-gitref:7aa2f4826717[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:7aa2f4826717[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 Add flags to filter jail prison and vnet variables in man:sysctl[8] output.
 So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
-gitref:615c9ce250ee[repository=src].
+gitref:615c9ce250ee[repository=src]
 
 man:grep[1] no longer follows symbolic links by default for recursive searches.
 This matches the documented behavior in the manual page.
@@ -477,27 +477,28 @@ gitref:0a096a7b3ae8[repository=src]
 gitref:dc3f24ea8a25[repository=src]
 
 
-man:zfs[8]: OpenZFS has been updated to zfs-2.2-release(2.2.7)(gitref:2ec8b6948070[repository=src]).
+man:zfs[8]: OpenZFS has been updated to zfs-2.2-release(2.2.7). gitref:2ec8b6948070[repository=src]
 
-man:xz[1] has been updated to 5.8.1(gitref:9679eedea94c[repository=src]).
+man:xz[1] has been updated to 5.8.1. gitref:9679eedea94c[repository=src]
 
-man:less[1] has been updated to v668(gitref:0bb4c188d363[repository=src]).
+man:less[1] has been updated to v668. gitref:0bb4c188d363[repository=src]
 
-man:file[1] has been updated to 5.46(gitref:71c92e6b94f0[repository=src]).
+man:file[1] has been updated to 5.46. gitref:71c92e6b94f0[repository=src]
 
-man:expat[3] has been updated to 2.7.1(gitref:6f7ee9ac036e[repository=src]).
+man:expat[3] has been updated to 2.7.1. gitref:6f7ee9ac036e[repository=src]
 
-`tzdata` has been updated to 2025b(gitref:475082194ac8[repository=src]).
+`tzdata` has been updated to 2025b. gitref:475082194ac8[repository=src]
 
-OpenSSH has been updated to 9.9p2(gitref:059b786b7db5[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+OpenSSH has been updated to 9.9p2. gitref:059b786b7db5[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
-OpenSSL has been updated to 3.0.16(gitref:cb29db243bd0[repository=src]).
+OpenSSL has been updated to 3.0.16. gitref:cb29db243bd0[repository=src]
 
-`googletest` has been updated from 1.14.0 to 1.15.2(gitref:1d67cec52542[repository=src]).
+`googletest` has been updated from 1.14.0 to 1.15.2.
 One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
+gitref:1d67cec52542[repository=src]
 
-`spleen` has been updated to Spleen 2.1.0(gitref:26336203d32c[repository=src]).
+`spleen` has been updated to Spleen 2.1.0. gitref:26336203d32c[repository=src]
 
 [[userland-libraries]]
 === Runtime Libraries and API
@@ -522,7 +523,7 @@ It reports whether a `cap_rights_t` has no rights set.
 gitref:e77813f7e4a3[repository=src]
 (Sponsored by The FreeBSD Foundation)
 
-`libcxxrt` has been updated to upstream 6f2fdfebcd62(gitref:d9901a23bd2f[repository=src]).
+`libcxxrt` has been updated to upstream 6f2fdfebcd62. gitref:d9901a23bd2f[repository=src]
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -533,19 +534,19 @@ gitref:3958be5c29da[repository=src] (Sponsored by The FreeBSD Foundation)
 The accuracy of man:asinf[3] and man:acosf[3] has improved.
 gitref:33c82f11c267[repository=src]
 
-Update deprecation warning to note that man:gvinum[8] is removed in 15.0(gitref:dec497a9fcbf[repository=src]).
+Update deprecation warning to note that man:gvinum[8] is removed in 15.0. gitref:dec497a9fcbf[repository=src]
 
 Deprecation notice for man:syscons[4] has been added.
 man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant-locked.
 There is no specific timeline yet for removing it, but support for the Giant lock is expected to go away in one or two major release cycles.
-(gitref:8c922db4f3d9[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+gitref:8c922db4f3d9[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 OpenSSH plans to remove support for the DSA signature algorithm in early 2025.
 
 man:publickey[5] stuffs has been deprecated.
 This uses DES and it is likely that nobody uses that in 2025.
-(gitref:9197c04a251b[repository=src]).
+gitref:9197c04a251b[repository=src]
 
 [[cloud]]
 == Cloud Support
@@ -554,8 +555,8 @@ This section covers changes in support for cloud environments.
 
 {releaseCurrent} supports cloudinit, including the `nuageinit` startup script and support for a `config-drive` partition.
 It is compatible with OpenStack and many hosting facilities.
-See the https://cloud-init.io[cloud-init] web site and the commit messages,
-gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. (Sponsored by OVHCloud)
+See the https://cloud-init.io[cloud-init] web site and the commit messages
+gitref:16a6da44e28d[repository=src] and gitref:227e7a205edf[repository=src]. (Sponsored by OVHCloud)
 
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
@@ -585,31 +586,31 @@ The `fpu_kern_enter` and `fpu_kern_leave` routines have been implemented for pow
 gitref:91e53779b4fc[repository=src]
 
 Support legacy PCI hotplug on arm64.
-gitref:355f02cddbf0[repository=src].
-(Sponsored by Arm Ltd).
+gitref:355f02cddbf0[repository=src]
+(Sponsored by Arm Ltd)
 
 Define a common 'mac' node for MAC's jail parameters for man:mac[3].
 To be used by man:mac_do[4].
-gitref:66fb52a27279[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:66fb52a27279[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 New `setcred()` system call and associated MAC hooks.
-This new system call allows to set all necessary credentials of a process in one go: Effective, real and saved UIDs, effective, real and saved GIDs, supplementary groups and the MAC label.
+This new system call allows to set all necessary credentials of a process in one go: Effective, real, and saved UIDs, effective, real, and saved GIDs, supplementary groups, and the MAC label.
 Its advantage over standard credential-setting system calls (such as `setuid()`, `seteuid()`, etc.) is that it enables MAC modules, such as man:mac_do[4], to restrict the set of credentials some process may gain in a fine-grained manner.
-gitref:c1d7552dddb5[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:c1d7552dddb5[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 Support multiple users and groups as single rule's targets in man:mac_do[4].
 Supporting group targets is a requirement for man:mac_do[4] to be able to enforce a limited set of valid new groups passed to `setgroups()`.
 Additionally, it must be possible for this set of groups to also depend on the target UID, since users and groups are quite tied in UNIX (users are automatically placed in only the groups specified through '/etc/passwd' (primary group) and '/etc/group' (supplementary ones)).
-gitref:83ffc412b2e9[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:83ffc412b2e9[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 Teach man:sysctl[8] to attach and run itself in a jail.
 This allows the parent jail to retrieve or set kernel state when child does not have man:sysctl[8] installed (for example light weighted OCI containers or slim jails).
 This is especially useful when manipulating jail prison or vnet sysctls.
 For example, `sysctl -j foo -Ja` or `sysctl -j foo net.fibs=2`.
-gitref:8d5d7e2ba3a6[repository=src].
+gitref:8d5d7e2ba3a6[repository=src]
 
 Enable vnet man:sysctl[9] variables to be loader tunable.
 In gitref:3da1cf1e88f8[repository=src], the meaning of the flag `CTLFLAG_TUN` is extended to automatically check if there is a kernel environment variable which shall initialize the `SYSCTL` during early boot.
@@ -625,13 +626,13 @@ Refactor `pcm_chnalloc()` and merge with parts of `vchan_setnew()` (now removed)
 The function is responsible for either using a free HW channel (if `vchans` are disabled), or allocating a new vchan.
 `hw.snd.vchans_enable` (previously `hw.snd.maxautovchans`) and `dev.pcm.X.{play|rec}.vchans` now work as tunables to only enable/disable `vchans`, as opposed to setting their number and/or (de-)allocating vchans.
 Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before it could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
-gitref:960ee8094913[repository=src].
-(Sponsored by	The FreeBSD Foundation).
+gitref:960ee8094913[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 LinuxKPI: `linux_alloc_pages()` now honors `__GFP_NORETRY`.
 This is to fix slowdowns with drm-kmod that get worse over time as physical memory become more fragmented (and probably also depending on other factors).
 gitref:831e6fb0baf6[repository=src]
-(Sponsored by The FreeBSD Foundation).
+(Sponsored by The FreeBSD Foundation)
 
 The local stream (AF_UNIX/SOCK_STREAM) and sequenced packet stream (AF_UNIX/SOCK_SEQPACKET) sockets have been improved for better bulk transfer and round trip times.
 The SOCK_SEQPACKET socket has been brought to the specification and now behaves as a true stream socket, while in previous FreeBSD releases it could exhibit features of
@@ -696,58 +697,59 @@ gitref:1db6ffb2a482[repository=src] (Sponsored by Amazon)
 
 man:nvme[4] and man:nvmecontrol[8] have been enabled on all architectures.
 gitref:24687a65dd7f[repository=src], gitref:aba2d7f89dcf[repository=src]
-(Sponsored by Chelsio Communications and Netflix)
+(Sponsored by Chelsio Communications) (Sponsored by Netflix)
 
-man:mpi3mr[4] driver version has been updated to 8.14.0.2.0(gitref:e6d4b221ba7c[repository=src]).
+man:mpi3mr[4] driver version has been updated to 8.14.0.2.0. gitref:e6d4b221ba7c[repository=src]
 
 man:mpi3mr[4] MPI Header has been updated to Version 36.
 This aligns with the latest MPI specification.
 This includes updated structures, field definitions, and constants required for compatibility with updated firmware.
-(gitref:60cf1576501d[repository=src]).
+gitref:60cf1576501d[repository=src]
 
-The man:mpi3mr[4] driver is now in GENERIC (gitref:e2b8fb2202c2[repository=src]).
+The man:mpi3mr[4] driver is now in GENERIC. gitref:e2b8fb2202c2[repository=src]
 
-man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14 (gitref:8ef442451791[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14. gitref:8ef442451791[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
-man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.14 (gitref:b6e8b845aeab[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.14. gitref:b6e8b845aeab[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
-man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adapters (gitref:8e62ae9693bd[repository=src]).
+man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adapters.
 Required firmware files are already included in to package:comms/iwmbt-firmware[] port.
+gitref:8e62ae9693bd[repository=src]
 
-man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
+man:ena[4] driver version has been updated to v2.8.1. gitref:a1685d25601e[repository=src]
 (Sponsored by Amazon, Inc.)
 
-man:ix[4]: Add support for 1000BASE-BX SFP modules x550(gitref:24491b4acce5[repository=src]).
+man:ix[4]: Add support for 1000BASE-BX SFP modules x550. gitref:24491b4acce5[repository=src]
 
 man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
-(gitref:54f842ed8897[repository=src]).
+gitref:54f842ed8897[repository=src]
 
 man:bnxt[4]: Add 5760X (Thor2) PCI IDs support.
 Add Thor2 PCI IDs.
-(gitref:45e161020c2d[repository=src]).
+gitref:45e161020c2d[repository=src]
 
-man:bnxt[4]: Add support for 400G speed modules (gitref:32fdad17f060[repository=src]).
+man:bnxt[4]: Add support for 400G speed modules. gitref:32fdad17f060[repository=src]
 
 man:ix[4]: Add support for 1000BASE-BX SFP modules.
 Add support for 1Gbit BiDi modules.
-(gitref:c34817d9aef7[repository=src]).
+gitref:c34817d9aef7[repository=src]
 
 man:igc[4]: Fix attach for I226-K and LMVP devices.
 The device IDs for these were in the driver's list of PCI ids to attach to, but `igc_set_mac_type()` had never been setup to set the correct mac type for these devices.
 Fix this by adding these IDs to the switch block in order for them to be recognized by the driver instead of returning an error.
 This fixes the man:igc[4] attach for the I226-K LOM on the ASRock Z790 PG-ITX/TB4 motherboard, allowing it to be recognized and used.
-gitref:f034ddd2fa38[repository=src].
+gitref:f034ddd2fa38[repository=src]
 
 Remove old itr sysctl handler from man:em[4].
 This implementation had various bugs.  The unit conversion/scaling was wrong, and it also did not handle 82574L or man:igb[4] devices correctly.
 With the new AIM code, it is expected most users will not need to manually tune this.
 gitref:edf50670e215[repository=src]
-(Sponsored by	BBOX.io).
+(Sponsored by BBOX.io)
 
 Added support for Brainboxes USB-to-Serial adapters in man:uftdi[4].
-(gitref:47db906375b5[repository=src])
+gitref:47db906375b5[repository=src]
 
 The man:iwx[4] driver has been added, supporting the Intel Wi-Fi 6 series of M.2 wireless network adapters.
 gitref:2ad0f7e91582[repository=src] (Sponsored by The FreeBSD Foundation)
@@ -806,7 +808,7 @@ Allow to pass `{NGROUPS_MAX} + 1` groups in man:mountd[8].
 The actual runtime value may be greater.
 Allow more groups to be specified accordingly (now that, a few commits ago, man:nmount[2] has been changed similarly).
 gitref:ca9614d8f64a[repository=src]
-(Sponsored by The FreeBSD Foundation).
+(Sponsored by The FreeBSD Foundation)
 
 [[boot-loader]]
 == Boot Loader Changes
@@ -816,9 +818,8 @@ This section covers the boot loader, boot menu, and other boot-related changes.
 The man:loader[8] now reads local configuration files listed in the variable `local_loader_conf_files` after other configuration files, defaulting to [.filename]#/boot/loader.conf.local#.
 gitref:a25531db0fc2[repository=src]
 
-The man:loader[8] can now be configured to read specific configuration files based on the planar maker, planar product, system product and uboot m_product variables from the SMBIOS.
-For the moment, the best documentation is the git commit message,
-gitref:3eb3a802a31b[repository=src].
+The man:loader[8] can now be configured to read specific configuration files based on the planar maker, planar product, system product, and uboot m_product variables from the SMBIOS.
+For the moment, the best documentation is the git commit message, gitref:3eb3a802a31b[repository=src].
 
 Console detection in man:loader[8] has been improved on EFI systems.
 If there is no ConOut variable, ConIn is checked.
@@ -830,7 +831,7 @@ gitref:57ca2848c0aa[repository=src] (Sponsored by Netflix)
 
 The detection of ACPI is now done earlier in man:loader.efi[8] on arm64 systems.
 The copy of [.filename]#loader.efi# on the EFI partition should be updated on arm64 systems using ACPI.
-gitref:05cf4dda599a[repository=src] gitref:16c09de80135[repository=src]
+gitref:05cf4dda599a[repository=src], gitref:16c09de80135[repository=src]
 
 The LinuxBoot loader can be used to boot FreeBSD from Linux on aarch64 systems as well as amd64.
 gitref:46010641267[repository=src] (Sponsored by Netflix)
@@ -841,28 +842,28 @@ gitref:4d3b05a8530e[repository=src] (Sponsored by Netflix)
 
 man:loader.efi[8]: Favor the v3 (64-bit) entry point in man:smbios[4].
 Be consistent with what is done with non-EFI boot (but with the difference that EFI runs in 64-bit mode on 64-bit platforms, so there is no restriction that the v3 entry point should be below 4GB).
-gitref:807d51be8040[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:807d51be8040[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 man:libsa[3]: Favor the v3 (64-bit) entry point on non-EFI boot in man:smbios[4].
 When both the 32-bit and 64-bit entry points are present, the SMBIOS specification says that the 64-bit entry point always has at least all the structures the 32-bit entry point refers.
 In other words, the 32-bit entry point is provided for compatibility, so it is assumed the 64-bit one has more chances to be filled with adequate values.
 gitref:93af0db0d529[repository=src]
-(Sponsored by The FreeBSD Foundation).
+(Sponsored by The FreeBSD Foundation)
 
 man:libsa[3]: Use 64-bit entry point if table below 4GB on non-EFI boot in man:smbios[4].
 On amd64, boot blocks and the non-EFI loader are 32-bit compiled as clients of BTX, so cannot access addresses beyond 4GB.
 However, the 64-bit entry point may refer to a structure table below 4GB, which can be used if the BIOS does not provide a 32-bit entry point.
 The situation is similar for powerpc64.
-gitref:7b0350b376c0[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:7b0350b376c0[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 Search for v3 (64-bit) entry point first on BIOS boot in man:smbios[4].
 When booted from BIOS (i.e., not EFI), also search for a 64-bit version of the SMBIOS Entry Point.
 This allows to detect and report the proper SMBIOS version with BIOSes that only provide the v3 table, as happens on Hetzner virtual machines.
 For machines that provide both, leverage the v3 table in priority consistently with the EFI case.
-gitref:145ef4af15f0[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:145ef4af15f0[repository=src]
+(Sponsored by The FreeBSD Foundation)
 [[network]]
 == Networking
 
@@ -895,11 +896,11 @@ gitref:6df9fa1c6b83[repository=src] and others
 The netgraph man:ng_ipfw[4] module no longer truncates cookies to 16 bits, allowing a full 32 bits.
 gitref:dadf64c5586e[repository=src]
 
-AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
-gitref:472a0ccf847a[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
+AIM (Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
+gitref:472a0ccf847a[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate")) (Sponsored by BBOX.io)
 
-This feature has also been added to the man:lem[4], man:em[4] and man:igb[4] drivers.  A major regression in UDP performance introduced in FreeBSD 12.0, including NFS over UDP, is believed to be fixed with this change.
-gitref:49f12d5b38f6[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
+This feature has also been added to the man:lem[4], man:em[4], and man:igb[4] drivers.  A major regression in UDP performance introduced in FreeBSD 12.0, including NFS over UDP, is believed to be fixed with this change.
+gitref:49f12d5b38f6[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate")) (Sponsored by BBOX.io)
 
 Teach man:ip6addrctl[8] to attach and run itself in a jail.
 This will make it easier to manage address selection policies of vnet jails, especially for those light weighted OCI containers or slim jails.
@@ -952,8 +953,8 @@ gitref:99d3ce80ba07[repository=src]
 == Multimedia
 
 Many improvements to the audio stack including support for hot-swapping in man:mixer[8], and the addition of man:mididump[1].
-gitref:cf9d2fb18433[repository=src] (Sponsored by The FreeBSD Foundation)
-gitref:7224e9f2d4af[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:cf9d2fb18433[repository=src], gitref:7224e9f2d4af[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 [[documentation]]
 == Documentation
@@ -966,38 +967,38 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 A new man:networking[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
 gitref:39f92a4c4c49[repository=src]
 
-Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8]).
-(gitref:55cb3a33d920[repository=src]).
+Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8].
+gitref:55cb3a33d920[repository=src]
 
 man:ps[1]: Document change in behavior for `-a`/`-A`.
 Document the practical consequence of change gitref:93a94ce731a8[repository=src] that specifying `-a`/`-A` leads to printing all processes regardless of the presence of other process selection options (except for `-x`/`-X`, which command a filter).
-gitref:eed005b57895[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:eed005b57895[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 man:ps[1]: Change in behavior for option `-U`.
 gitref:4e4739dd0745[repository=src]
-(Sponsored by The FreeBSD Foundation).
+(Sponsored by The FreeBSD Foundation)
 
 man:ps[1]: Change of how current user's processes are matched.
-gitref:7219648f60d1[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:7219648f60d1[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 man:ps[1]: Match current user's processes using effective UID.
 This puts man:ps[1] of FreeBSD in conformance with POSIX.
-gitref:1e8dc267ca91[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:1e8dc267ca91[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
-man:mac_do[4]: Change of rules syntax; Provide hints and pointers.
-gitref:0c3357dfa18f[repository=src].
-(Sponsored by The FreeBSD Foundation).
+man:mac_do[4]: Change of rules syntax; provide hints and pointers.
+gitref:0c3357dfa18f[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 man:firewire[4]: Add deprecation notice.
 This was originally discussed as part of FreeBSD 15 planning, but did not happen in time.
 Add the deprecation notice now, with an expectation that it will be removed before FreeBSD 16.
-gitref:fc889167c319[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:fc889167c319[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
-The ethernet switch controllers, man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], and man:e6000sw[4] have gained initial manual pages.
+The ethernet switch controllers man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], and man:e6000sw[4] have gained initial manual pages.
 
 man:mount[8] has gained an example for remounting all filesystems read/write in single-user mode.
 
@@ -1019,7 +1020,7 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 
 A new `FreeBSD-kmods` repository is included in the default `/etc/pkg/FreeBSD.conf` man:pkg[8] configuration file.
 This repository contains kernel modules compiled specifically for {releaseCurrent} rather than for the {releaseBranch} branch.
-Installing kernel modules from this repository allows drivers with unstable kernel interfaces, in particular graphics drivers, to work even when the main {releaseBranch} repository has packages build on a previous release. (gitref:a47542f71511[repository=src]).
+Installing kernel modules from this repository allows drivers with unstable kernel interfaces, in particular graphics drivers, to work even when the main {releaseBranch} repository has packages build on a previous release. gitref:a47542f71511[repository=src]
 
 The `FreeBSD` and `FreeBSD-kmods` repositories defined in `/etc/pkg/FreeBSD.conf` have been renamed to `FreeBSD-ports` and `FreeBSD-ports-kmods` respectively.
 Users who override these in `/usr/local/etc/pkg/repos` will need to adjust their configuration to match the new names.
