update translation of books/faq to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53713

--- a/documentation/content/ru/books/faq/_index.po
+++ b/documentation/content/ru/books/faq/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-06-29 21:20+0100\n"
-"PO-Revision-Date: 2025-10-30 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfaq_index/ru/>\n"
@@ -105,7 +105,7 @@ msgstr ""
 "спектра применений — от серверов и встраиваемых систем до настольных "
 "компьютеров и сетевого оборудования.  Приверженность принципам открытого "
 "исходного кода обеспечивает прозрачный и совместный процесс разработки, что "
-"делает FreeBSD надежным выбором для тех, кто ищет стабильную и "
+"делает FreeBSD надёжным выбором для тех, кто ищет стабильную и "
 "высокоадаптируемую операционную систему."
 
 #. type: Title ===
@@ -175,7 +175,7 @@ msgstr ""
 "принципам открытого исходного кода, создавая среду для сотрудничества, в "
 "которой вклад глобального сообщества разработчиков помогает формировать и "
 "совершенствовать операционную систему.  Эта приверженность качеству, свободе "
-"и надежности отличает FreeBSD и способствует её постоянному успеху как "
+"и надёжности отличает FreeBSD и способствует её постоянному успеху как "
 "проекта с открытым исходным кодом."
 
 #. type: Title ===
@@ -247,7 +247,7 @@ msgid ""
 "system."
 msgstr ""
 "Этот совместный и ориентированный на сообщество подход был основополагающим "
-"для успеха и долголетия FreeBSD в качестве надежной и устойчивой UNIX-"
+"для успеха и долголетия FreeBSD в качестве надёжной и устойчивой UNIX-"
 "подобной операционной системы."
 
 #. type: Title ===
@@ -379,7 +379,7 @@ msgid ""
 "evaluate your specific use case and compatibility requirements before making "
 "the switch."
 msgstr ""
-"Хотя она предлагает надежную и многофункциональную альтернативу, важно "
+"Хотя она предлагает надёжную и многофункциональную альтернативу, важно "
 "оценить ваши конкретные задачи и требования к совместимости перед переходом."
 
 #. type: Plain text
@@ -425,7 +425,7 @@ msgstr ""
 "Да, FreeBSD хорошо подходит для запуска популярного открытого программного "
 "обеспечения.  Его совместимость с широким спектром приложений и библиотек "
 "делает его предпочтительным выбором для тех, кто хочет развертывать и "
-"использовать пакеты открытого ПО.  FreeBSD предоставляет надежную и "
+"использовать пакеты открытого ПО.  FreeBSD предоставляет надёжную и "
 "стабильную среду, поддерживающую различные языки программирования, базы "
 "данных, веб-серверы и другое ПО, часто используемое в сообществе открытого "
 "исходного кода.  Система портов и пакетов FreeBSD упрощает установку и "
@@ -603,7 +603,7 @@ msgid ""
 "FreeBSD is freely available for download from the link:https://www.FreeBSD."
 "org/where/[official FreeBSD website]."
 msgstr ""
-"FreeBSD доступна для бесплатной загрузки по ссылке: link:https://www.FreeBSD."
+"FreeBSD доступна для бесплатной загрузки по ссылке link:https://www.FreeBSD."
 "org/ru/where/[официальный сайт FreeBSD]."
 
 #. type: Plain text
@@ -617,7 +617,7 @@ msgid ""
 msgstr ""
 "Кроме того, FreeBSD также может быть доступен через различные зеркальные "
 "сайты, что обеспечивает доступность для пользователей по всему миру.  "
-"Основным и наиболее надежным источником для получения последних выпусков и "
+"Основным и наиболее надёжным источником для получения последних выпусков и "
 "обновлений FreeBSD является link:https://www.FreeBSD.org/ru/where/["
 "официальный сайт], что делает его идеальной отправной точкой для начала "
 "работы с FreeBSD."
@@ -1037,7 +1037,7 @@ msgid ""
 "adapters from various manufacturers, ensuring seamless integration and "
 "optimal network performance."
 msgstr ""
-"FreeBSD обеспечивает надежную поддержку сетевых карт 10 Gigabit Ethernet, "
+"FreeBSD обеспечивает надёжную поддержку сетевых карт 10 Gigabit Ethernet, "
 "что делает его подходящим выбором для высокоскоростных сетевых сред.  Ядро "
 "FreeBSD включает драйверы для широкого спектра адаптеров 10 Gigabit Ethernet "
 "от различных производителей, гарантируя беспрерывную интеграцию и "
@@ -1049,8 +1049,8 @@ msgid ""
 "More information can be obtained at the link:https://wiki.freebsd.org/"
 "Networking/10GbE[FreeBSD Wiki]."
 msgstr ""
-"Дополнительную информацию можно получить по ссылке: link:https://wiki."
-"freebsd.org/Networking/10GbE[FreeBSD Wiki]."
+"Дополнительную информацию можно получить по ссылке link:https://wiki.freebsd."
+"org/Networking/10GbE[FreeBSD Wiki]."
 
 #. type: Title ==
 #: documentation/content/en/books/faq/_index.adoc:333
@@ -1275,8 +1275,8 @@ msgid ""
 "The official FreeBSD forums are located at the link:https://forums.FreeBSD."
 "org/[FreeBSD Forums homepage]."
 msgstr ""
-"Официальные форумы FreeBSD расположены по ссылке: link:https://forums."
-"FreeBSD.org/[Домашняя страница форумов FreeBSD]."
+"Официальные форумы FreeBSD расположены по ссылке link:https://forums.FreeBSD."
+"org/[Домашняя страница форумов FreeBSD]."
 
 #. type: Title ===
 #: documentation/content/en/books/faq/_index.adoc:396
@@ -1290,8 +1290,8 @@ msgid ""
 "The public mailing lists can be found at the link:https://lists.freebsd.org/"
 "[FreeBSD mailing lists]."
 msgstr ""
-"Списки рассылки с открытым доступом можно найти по ссылке: link:https://"
-"lists.freebsd.org/[списки рассылки FreeBSD]."
+"Списки рассылки с открытым доступом можно найти по ссылке link:https://lists."
+"freebsd.org/[списки рассылки FreeBSD]."
 
 #. type: Title ==
 #: documentation/content/en/books/faq/_index.adoc:401
